--- a/stucampus/templates/activity/manage.html
+++ b/stucampus/templates/activity/manage.html
@@ -2,9 +2,10 @@
     <head>
     </head>
     <body>
-        <form method="post" action="{% url 'activity:submit" %}>
+        <form method="post" action="{% url 'activity:submit' %}">
             {% csrf_token %}
-            {{ formset }}
+            {{ formset.as_ul }}
+            <input type="submit" value="submit"/>
         </form>
     </body>
 </html>
