--- a/stucampus/templates/master/infor-list.html
+++ b/stucampus/templates/master/infor-list.html
@@ -3,7 +3,7 @@
 {% block htmlhead %}
 {% load html_tools %}
 {{ 'admin/organization.css' | as_css }}
-{{ 'admin/inforArticle.js' | as_js }}
+{{ 'admin/infor-article.js' | as_js }}
 {% endblock %}
 
 {% block content %}
