--- a/stucampus/templates/master/infor-post.html
+++ b/stucampus/templates/master/infor-post.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <h2>{% if infor %}编辑{%else%}添加{%endif%}信息文章 &amp; {% if infor %}Edit{%else%}Add{%endif%} Infor Article</h2>
-    <form class="list" id="infor-form" method='{% if infor %}put{%else%}post{%endif%}' action='/manage/infor{%if infor%}/{{infor.id}}{%endif%}'>
+    <form class="list" id="infor-form" method='{% if infor %}put{%else%}post{%endif%}' action='/manage/infor/{%if infor%}{{infor.id}}{%else%}post{%endif%}'>
     {% csrf_token %}
     <ul>
         <li>
