Fixed bugs in templates.

--- a/stucampus/templates/account/password.html
+++ b/stucampus/templates/account/password.html
@@ -4,6 +4,7 @@
                 <div class="change">
                         <h4>修改{{ user.student.screen_name }}的个人资料</h4>
                         <form method="put" action="/account/profile/password" id="changeInfor">
+                        <input type='hidden' name='current_email' value='{{ user.email }}' />
                         <ul>
                             <li>
                                 <label>当前密码</label><span>：</span>
