--- a/stucampus/templates/master/base.html
+++ b/stucampus/templates/master/base.html
@@ -7,6 +7,7 @@
     <title>深圳大学学子天地管理系统</title>
     {% load html_tools %}
     {{ 'base.css' | as_css }}
+    {{ 'message-box.css' | as_css }}
     {{ 'admin/layout.css' | as_css }}
     <!--[if IE]>{{ 'admin/ie-fix.css' | as_css }}<![endif]--> 
     {{ 'plugins/jquery.min.js' | as_js }}
