--- a/stucampus/templates/lecture/add_new.html
+++ b/stucampus/templates/lecture/add_new.html
@@ -1,23 +1,45 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
     <head>
-        <style>
-            input{
-                display: block;
-            }
-        </style>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+        <link href="AddLecture.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <form action="{% url 'lecture:add_new' %}" method="POST">
-            {% csrf_token %}
-            <div>title {{ form.title.errors }}{{ form.title }}</div>
-            <div>place {{ form.place.errors }}{{ form.place }}</div>
-            <div>date time sample:2013-9-1 21:22
-                {{ form.date_time.errors }}{{ form.date_time }}
-            </div>
-            <div>url id {{ form.url_id.errors }} {{ form.url_id }}</div>
-            <div>check {{ form.is_check }}</div>
-            <div>delete {{ form.is_delete }}</div>
-            <input type="submit" value="submit" />
-        </form>
+        <div class="container">
+            <!-- 标题  Begin -->
+            <div class="title">AddLecture</div>
+            <!-- 标题  End -->
+            <!-- 输入框  Begin -->
+            <div class="main">
+                <div class="text_container">
+                    <form action="{% url 'lecture:add_new' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="meslist">
+                            <div class="text">标题</div>
+                            {{ form.title.errors }}{{ form.title }}
+                        </div>
+                        <div class="meslist">
+                            <div class="text">地点</div>
+                            {{ form.place.errors }}{{ form.place }}
+                        </div>
+                        <div class="meslist">
+                            <div class="text">日期时间</div> 
+                            {{ form.date_time.errors }}{{ form.date_time }}
+                            <div class="text" style=width:120px;font-size:14px;margin-right:0px>如2013-9-1 21:22</div>
+                        </div>
+                        <div class="meslist">
+                            <div class="text">URL ID</div>
+                            {{ form.url_id.errors }} {{ form.url_id }}
+                        </div>
+                        <div class="chose check">已核 {{ form.is_check }}</div>
+                        <div class="chose delete">删除 {{ form.is_delete }}</div>
+                        <div style=margin-top:80px;text-align:center>
+                            <input class="button" type="submit" value="submit" />
+                        </div>
+                </form>
+                </div>       
+            </div>   
+            <!-- 输入框  End    -->
+        </div>
     </body>
 </html>
