--- a/stucampus/templates/lecture/manage.html
+++ b/stucampus/templates/lecture/manage.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-        <link href="Message.css" rel="stylesheet" type="text/css">
+        {% load html_tools %}
+        {{ 'lecture/Message.css' | as_css }}
     </head>
     
 <body>
