--- a/stucampus/static/styles/lecture/Message.css
+++ b/stucampus/static/styles/lecture/Message.css
@@ -1,173 +1,174 @@
-            *{
-                margin:0px;
-                padding: 0px;
-            }
-            body{
-                background-color: #fdeff2;
-            }
-            .float{
-                width: 100px;
-                height: 120px;
-                position: fixed;
-                top: 200px;
-                right:80px; 
-            }
-            .float_link{
-                display: block;
-                width: 100px;
-                height: 50px;
-                background-color:#007bbb;
-                font-family: "微软雅黑";
-                font-size: 24px;
-                color: #ffffff;
-                text-align: center;
-                text-decoration: none;
-                line-height: 50px;
-                vertical-align: middle;
-                border-width: 0;
-                border-radius: 5px;
-                cursor: pointer;
-                box-shadow: 0 3px 0 rgba(0, 0, 0, 0.3);
-                position: relative;
-                margin:10px 0px;
-                z-index: 50;
-            }
-            .container{
-                width: 900px;
-                position: relative;
-                margin: 0 auto;
-                overflow: hidden;
-            }
-            .header{
-                width: 100%;
-                height: 150px;
-                font-family: "微软雅黑";
-                color: #007bbb;
-                font-size: 40px;
-                line-height: 420%;
-                position: relative;
-                margin-bottom: 50px;
-                background: url(blue.png) repeat-x bottom left;
-                text-align: center;
-            }
-            .link{
-                display: inline-block;
-                font-family: "微软雅黑";
-                color: #007bbb;
-                font-size: 40px;
-                text-decoration: none;
-                margin-top: 58px;
-                padding: 0 30px;
-            }
-            .message{
-                width: 900px;
-                height: 400px;
-                overflow: hidden;
-            }
-            .is_delete{
-                background-image: url(red.png);
-                background-repeat: repeat-x;
-                background-color: #ee827c;
-            }
-            .not_delete{
-                background-image: url(green.png);
-                background-repeat: repeat-x;
-                background-color: #98d98e;
-            }
-            .box{
-                width: 840px;
-                height: 290px;
-                position: relative;
-                margin: 0 auto;
-                margin-top: 80px;
-                overflow: hidden;
-            }
-            .meslist{
-                width: 100%;
-                height: 50px;
-                position: relative;
-                overflow: hidden;
-            }
-            .text{
-                width: 100px;
-                height: 100%;
-                position: relative;
-                float: left;
-                margin-right: 10px;
-                font-family: "微软雅黑";
-                font-size: 22px;
-                color: #ffffff;
-                text-align: center;
-                line-height: 50px;
-                vertical-align: middle;
-            }
-            .textbox{
-                font-family: "微软雅黑";
-                font-size: 18px;
-                width: 700px;
-                height: 30px;
-                position: relative;
-                margin-top: 10px;
-                float: left;
-            }
-            .line{
-                width: 840px;
-                border-top-style: solid;
-                border-top-color: #ffffff;
-                position: relative;
-                margin: 0 auto;
-                margin-top: 20px;
-            }
-            .url{
-                display: block;
-                font-family: "微软雅黑";
-                color: #ffffff;
-                font-size: 22px;
-                text-decoration: none;
-                text-align: center;
-                position: relative;
-                margin-top: 20px;
-            }
-            .chose{
-                height: 30px;
-                font-family: "微软雅黑";
-                font-size: 22px;
-                color: #ffffff;
-                line-height: 30px;
-                vertical-align: middle;
-                position: absolute;
-                bottom: 20px;
-                overflow: hidden;
-            }
-            .check{
-                left: 200px;
-            }
-            .delete{
-                right: 200px;
-            }
-            .tick{
-                margin-left: 5px;
-            }
-            .linedec{
-                width: 100%;
-                height: 25px;
-                background-image: url(blue.png);
-                position: relative;
-                margin-top:50px;
-            }
-            .button{
-                width: 280px;
-                height: 50px;
-                font-family: "微软雅黑";
-                font-size: 24px;
-                color: #ffffff;
-                display: inline-block;
-                background-color:#007bbb;
-                border-width: 0;
-                border-radius: 5px;
-                cursor: pointer;
-                box-shadow: 0 3px 0 rgba(0, 0, 0, 0.3);
-            }
-            .hidden{
-                display: none;
-            }
+*{
+    margin:0px;
+    padding: 0px;
+}
+body{
+    background-color: #fdeff2;
+}
+.float{
+    width: 100px;
+    height: 120px;
+    position: fixed;
+    top: 200px;
+    right:80px; 
+}
+.float_link{
+    display: block;
+    width: 100px;
+    height: 50px;
+    background-color:#007bbb;
+    font-family: "微软雅黑";
+    font-size: 24px;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    line-height: 50px;
+    vertical-align: middle;
+    border-width: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.3);
+    position: relative;
+    margin:10px 0px;
+    z-index: 50;
+}
+.container{
+    width: 900px;
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden;
+}
+.header{
+    width: 100%;
+    height: 150px;
+    font-family: "微软雅黑";
+    color: #007bbb;
+    font-size: 40px;
+    line-height: 420%;
+    position: relative;
+    margin-bottom: 50px;
+    background: url(/static/images/lecture/blue.png) repeat-x bottom left;
+    text-align: center;
+}
+.link{
+    display: inline-block;
+    font-family: "微软雅黑";
+    color: #007bbb;
+    font-size: 40px;
+    text-decoration: none;
+    margin-top: 58px;
+    padding: 0 30px;
+}
+.message{
+    margin-top: 30px;
+    width: 900px;
+    height: 400px;
+    overflow: hidden;
+}
+.is_delete{
+    background-image: url(/static/images/lecture/red.png);
+    background-repeat: repeat-x;
+    background-color: #ee827c;
+}
+.not_delete{
+    background-image: url(/static/images/lecture/green.png);
+    background-repeat: repeat-x;
+    background-color: #98d98e;
+}
+.box{
+    width: 840px;
+    height: 290px;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 80px;
+    overflow: hidden;
+}
+.meslist{
+    width: 100%;
+    height: 50px;
+    position: relative;
+    overflow: hidden;
+}
+.text{
+    width: 100px;
+    height: 100%;
+    position: relative;
+    float: left;
+    margin-right: 10px;
+    font-family: "微软雅黑";
+    font-size: 22px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 50px;
+    vertical-align: middle;
+}
+.textbox{
+    font-family: "微软雅黑";
+    font-size: 18px;
+    width: 700px;
+    height: 30px;
+    position: relative;
+    margin-top: 10px;
+    float: left;
+}
+.line{
+    width: 840px;
+    border-top-style: solid;
+    border-top-color: #ffffff;
+    position: relative;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.url{
+    display: block;
+    font-family: "微软雅黑";
+    color: #ffffff;
+    font-size: 22px;
+    text-decoration: none;
+    text-align: center;
+    position: relative;
+    margin-top: 20px;
+}
+.chose{
+    height: 30px;
+    font-family: "微软雅黑";
+    font-size: 22px;
+    color: #ffffff;
+    line-height: 30px;
+    vertical-align: middle;
+    position: absolute;
+    bottom: 20px;
+    overflow: hidden;
+}
+.check{
+    left: 200px;
+}
+.delete{
+    right: 200px;
+}
+.tick{
+    margin-left: 5px;
+}
+.linedec{
+    width: 100%;
+    height: 25px;
+    background-image: url(blue.png);
+    position: relative;
+    margin-top:50px;
+}
+.button{
+    width: 280px;
+    height: 50px;
+    font-family: "微软雅黑";
+    font-size: 24px;
+    color: #ffffff;
+    display: inline-block;
+    background-color:#007bbb;
+    border-width: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.3);
+}
+.hidden{
+    display: none;
+}
