fix bug in html

--- a/stucampus/templates/activity/index.html
+++ b/stucampus/templates/activity/index.html
@@ -3,7 +3,7 @@
     </head>
     <body>
         {% for m in activities %}
-        <div>{{ m.title }} {{ m.date_time }}</div>
+        <div>{{ m.title }} {{ m.date_time|date:"Y n t" }}</div>
         {% endfor %}
     </body>
 </html>
