--- a/stucampus/templates/activity/add_base.html
+++ b/stucampus/templates/activity/add_base.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-        <link href="add_base.css" rel="stylesheet" type="text/css">
+        {% load html_tools %}
+        {{ 'activity/add_base.css' | as_css }}
 
         {% block htmltitle %}
         {% endblock %}
@@ -18,16 +19,10 @@
             <!-- 输入框  Begin -->
             <div class="main">
                 <div class="main_container">
-                    <form action="{{ action_url }}" method="POST">
-                        {% csrf_token %}
 
                         {% block content %}
                         {% endblock %}
                         
-                        <div class="button">
-                            <input type="submit" value="submit" />
-                        </div>
-                </form>
                 </div>       
             </div>   
             <!-- 输入框  End    -->
