--- a/stucampus/static/styles/activity/manage_base.css
+++ b/stucampus/static/styles/activity/manage_base.css
@@ -46,7 +46,7 @@ body{
     font-size: 40px;
     line-height: 420%;
     position: relative;
-    background: url(blue.png) repeat-x bottom left;
+    background: url(/static/images/lecture/blue.png) repeat-x bottom left;
     text-align: center;
 }
 .message_container{
@@ -115,7 +115,7 @@ body{
 .line{
     width: 100%;
     height: 25px;
-    background-image: url(blue.png);
+    background-image: url(/static/images/lecture/blue.png);
     position: relative;
     margin-top:50px;
 }
