--- a/stucampus/static/styles/lecture/manage_lecture.css
+++ b/stucampus/static/styles/lecture/manage_lecture.css
@@ -5,12 +5,12 @@
     overflow: hidden;
 }
 .is_delete{
-    background-image: url(red.png);
+    background-image: url(/static/images/lecture/red.png);
     background-repeat: repeat-x;
     background-color: #ee827c;
 }
 .not_delete{
-    background-image: url(green.png);
+    background-image: url(/static/images/lecture/green.png);
     background-repeat: repeat-x;
     background-color: #98d98e;
 }
