--- a/stucampus/templates/spider/index.html
+++ b/stucampus/templates/spider/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     {% load html_tools %}
     {{ 'spider/document.css' | as_css }}
+    {{ 'spider/manage.css' | as_css }}
 </head>
 <body>
     <div class="container">
@@ -28,17 +29,21 @@
         <!-- 消息  End -->
         {% endfor %}
         <!-- 信息列表  End -->
+
+        <div class="nav">
+            <a href="?page={{ page.paginator.num_pages }}">首页<a>
             {% if page.has_previous %}
-            <a href="?page={{ page.previous_page_number }}"> last page </a>
+            <a href="?page={{ page.previous_page_number }}" class="previous">上一页</a>
             {% endif %}
-
-            <span> {{ page.number }} </span>
-
+            <span class="num">
+                <span class="present">{{ page.number }}</span>
+            </span>
             {% if page.has_next %}
-            <a href="?page={{ page.next_page_number }}"> next page </a>
+            <a class="next" href="?page={{ page.next_page_number }}">下一页</a>
             {% endif %}
+            <a href="?page={{ page.paginator.num_pages }}">尾页<a>
+        </div>
 
-            <a href="?page={{ page.paginator.num_pages }}"> end page </a>
     </div>
 </body>
 </html>
