--- a/stucampus/static/styles/spider/document.css
+++ b/stucampus/static/styles/spider/document.css
@@ -6,7 +6,7 @@ body{
     background-color: #fdeff2;
 }
 .container{
-	width: 900px;
+    width: 900px;
     position: relative;
     margin: 0 auto;
     margin-bottom: 50px;
@@ -15,7 +15,7 @@ body{
 .header{
     width: 100%;
     height: 150px;
-    font-family: "微软雅黑";
+    font-family: "Microsoft Yahei";
     color: #007bbb;
     font-size: 40px;
     line-height: 420%;
@@ -24,12 +24,17 @@ body{
     background: url(/static/images/spider/blue.png) repeat-x bottom left;
     text-align: center;
 }
-.banner{
+.message{
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.list_head{
     width: 100%;
     height: 40px;
     position: relative;
     overflow: hidden;
-    font-family: "微软雅黑";
+    font-family: "Microsoft Yahei";
     line-height: 40px;
     vertical-align: middle;
     font-size: 18px;
@@ -37,13 +42,13 @@ body{
     color: #ffffff;
     text-align: center; 
 }
-.ban_class_who_date{
+.head_class_who_date{
     width: 10%;
     height: 100%;
     position: relative;
     float: left;
 }
-.ban_ele{
+.head_ele{
     width: 70%;
     height: 100%;
     position: relative;
@@ -54,7 +59,7 @@ body{
     height: 40px;
     position: relative;
     overflow: hidden;
-    font-family: "微软雅黑";
+    font-family: "Microsoft Yahei";
     font-size: 0px;
     line-height: 40px;
     vertical-align: middle;
@@ -82,9 +87,96 @@ body{
     text-decoration: none;
     overflow: hidden;
 }
-.odd{
+.white{
     background-color: #ffffff;
 }
-.even{
+.blue{
     background-color: #d5f3ff;
+}
+.nav{
+    height: 30px;
+    position: relative;
+    margin: 50px 0px 50px 0px;
+    overflow: hidden;
+    font-family: "Microsoft Yahei";
+    font-size: 0px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 30px;
+    vertical-align: middle;
+}
+.previous{
+    display: inline-block;
+    width: 75px;
+    height: 30px;
+    background: url(/static/images/spider/previous.png) no-repeat;
+    font-size: 15px;
+    color: #ffffff;
+    text-align: left;
+    text-indent: 20px;
+    text-decoration: none;
+}
+.next{
+    display: inline-block;
+    width: 75px;
+    height: 30px;
+    background: url(/static/images/spider/next.png) no-repeat;
+    font-size: 15px;
+    color: #ffffff;
+    text-align: left;
+    text-indent: 10px;
+    text-decoration: none;
+}
+.num{
+    display: inline-block;
+    height: 30px;
+}
+.num a{
+    display: inline-block; 
+    height: 30px;
+    padding:0em 0.7em;
+    margin: 0em 0.3em 0em 0.3em;
+    font-size: 15px;
+    color: #2ca9e1;
+    text-decoration: none;
+}
+.present{
+    display: inline-block;
+    height: 30px;
+    background-color: #2ca9e1;
+    padding:0em 0.7em;
+    margin: 0em 0.3em 0em 0.3em;
+    font-size: 15px;
+    color: #ffffff;
+}
+.text{
+    display: inline-block;
+    height: 30px;
+    padding:0em 0.4em;
+    font-size: 16px;
+    color: #2ca9e1;
+    font-weight: normal;
+}
+.nav input{
+    border:1px solid #efefef;
+    width: 45px;
+    height: 30px;
+    font-family: "Microsoft Yahei";
+    font-size: 15px;
+    color: #2ca9e1;
+    text-align: center;
+}
+.skip{
+    display: inline-block;
+    height: 30px;
+    background-color: #2ca9e1;
+    padding:0em 0.7em;
+    margin: 0em 0.3em 0em 0.3em;
+    font-size: 15px;
+    color: #ffffff;
+    text-decoration: none;
+}
+.num a:hover{
+    background-color: #2ca9e1;
+    color: #ffffff
 }
