--- a/stucampus/templates/spider/index.html
+++ b/stucampus/templates/spider/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
+    <link href="manege.css" rel="stylesheet" type="text/css">
     {% load html_tools %}
     {{ 'spider/document.css' | as_css }}
-    {{ 'spider/manage.css' | as_css }}
 </head>
 <body>
     <div class="container">
@@ -12,26 +12,30 @@
         <div class="header">MESSAGE</div>
         <!-- 标题  End -->
         <!-- 信息列表  Begin -->
-        <div class="banner">
-            <div class="ban_class_who_date">类别</div>
-            <div class="ban_class_who_date">发文单位</div>
-            <div class="ban_ele">标题</div>
-            <div class="ban_class_who_date">日期</div>
+        <div class="message">     
+            <div class="list_head">
+                <div class="head_class_who_date">类别</div>
+                <div class="head_class_who_date">发文单位</div>
+                <div class="head_ele">标题</div>
+                <div class="head_class_who_date">日期</div>
+            </div>
+            {% for a in page %}
+            <!-- 消息  Begin -->
+            <div class="list {% cycle 'blue' 'white' %}">
+                <div class="class_who_date">{{ a.category }}</div>
+                <div class="class_who_date">{{ a.publisher }}</div>
+                <a href="http://www.szu.edu.cn/board/view.asp?id={{ a.url_id }}" class="ele">{{ a.title }}</a>
+                <div class="class_who_date">{{ a.published_date|date:"D-n-d" }}</div>
+            </div>
+            <!-- 消息  End -->
+            {% endfor %}
         </div>
-        {% for a in page %}
-        <!-- 消息  Begin -->
-        <div class="list {% cycle 'odd' 'even' %}">
-            <div class="class_who_date">{{ a.category }}</div>
-            <div class="class_who_date">{{ a.publisher }}</div>
-            <a href="http://www.szu.edu.cn/board/view.asp?id={{ a.url_id }}" class="ele">{{ a.title }}</a>
-            <div class="class_who_date">{{ a.published_date|date:"D-n-d" }}</div>
-        </div>
-        <!-- 消息  End -->
-        {% endfor %}
         <!-- 信息列表  End -->
-
+        <!-- 分页栏  Begin -->
         <div class="nav">
-            <a href="?page={{ page.paginator.num_pages }}">首页<a>
+            <span class="num">
+                <a href="?page=1">首页</a>
+            </span>
             {% if page.has_previous %}
                 <a href="?page={{ page.previous_page_number }}" class="previous">上一页</a>
             {% endif %}
@@ -41,9 +45,11 @@
             {% if page.has_next %}
                 <a class="next" href="?page={{ page.next_page_number }}">下一页</a>
             {% endif %}
-            <a href="?page={{ page.paginator.num_pages }}">尾页<a>
+            <span class="num">
+                <a href="?page={{ page.paginator.num_pages }}">尾页</a>
+            </span>
         </div>
-
+        <!-- 分页栏  End -->
     </div>
 </body>
 </html>
