successfully use global.js in display error messages, but has not add redirect yet

--- a/stucampus/templates/activity/add_base.html
+++ b/stucampus/templates/activity/add_base.html
@@ -8,6 +8,7 @@
         {{ 'plugins/jquery.form.js' | as_js }}
         {{ 'google-analystics.js' | as_js }}
         {{ 'global.js' | as_js }}
+        {{ 'message-box.css' | as_css }}
 
         {{ 'activity/add_base.css' | as_css }}
 
