--- a/stucampus/static/styles/activity/add_base.css
+++ b/stucampus/static/styles/activity/add_base.css
@@ -62,14 +62,14 @@ body{
     margin-top: 10px;
     float: left;
 }
-.chose_container{
+.choose_container{
     width: 100%;
     height: 30px;
     position: relative;
     margin-top: 30px;
     overflow: hidden;
 }
-.chose{
+.choose{
     height: 30px;
     font-size: 22px;
     color: #ffffff;
@@ -84,7 +84,7 @@ body{
 .delete{
     right: 200px;
 }
-.chose input{
+.choose input{
     margin-left: 5px;
 }
 .button{
@@ -104,7 +104,7 @@ body{
     cursor: pointer;
     box-shadow: 0 3px 0 rgba(0, 0, 0, 0.3);
 }
-.error{
+.error-messages{
     width: 610px;
     position: relative;
     font-size: 15px;
