--- a/stucampus/templates/activity/add_activity.html
+++ b/stucampus/templates/activity/add_activity.html
@@ -5,31 +5,29 @@
 {% endblock %}
 
 {% block htmlhead %}
-    {% load html_tools %}
-    {{ 'activity/add_activity.css'|as_css }}
+    <script>
+        (function(){
+            var status = {'success': 'doyoubi success'}
+            $S.ajaxForm($('#add_activity_form'), {'status': status});
+        })()
+    </script>
 {% endblock %}
 
 {% block content %}
-    <form action="{% url 'activity:add_activity' %}" method="POST">
+    <form id="add_activity_form" action="{% url 'activity:add_activity' %}" method="POST">
         {% csrf_token %}
         <div class="input_list">
             <div class="title">标题</div>
             {{ form.title }}
         </div>
-        <div class="error">
-            {% for error in form.title.errors %}
-                {{ error }}
-            {% endfor %}
+        <div id="title-tips" class="error-messages">
         </div>
 
         <div class="input_list">
             <div class="title">地点</div>
             {{ form.place }}
         </div>
-        <div class="error">
-            {% for error in form.place.errors %}
-                {{ error }}
-            {% endfor %}
+        <div id="place-tips" class="error-messages">
         </div>
 
         <div class="input_list">
@@ -37,20 +35,14 @@
             {{ form.date_time }}
             <div class="title" style=width:120px;font-size:14px;margin-right:0px>如2013-9-1 21:22</div>
         </div>
-        <div class="error">
-            {% for error in form.date_time.errors %}
-                {{ error }}
-            {% endfor %}
+        <div id="date_time-tips" class="error-messages">
         </div>
 
         <div class="input_list">
             <div class="title">概括</div>
             {{ form.summary}}
         </div>
-        <div class="error">
-            {% for error in form.summary.errors %}
-                {{ error }}
-            {% endfor %}
+        <div id="summary-tips" class="error-messages">
         </div>
 
         <div class="button">
